# Slidown

./: .gitignore  BEFORE_RELEASE.txt  CHANGELOG.md  LICENSE  MANIFEST.in  PRE_RELEASE_CHECKLIST.md  PYPI_RELEASE_GUIDE.md  QUICKSTART.md  QUICK_START_PYPI.md  README.md  README.txt  README.zh.md  README_PYPI_UPDATE.md  RELEASE_SUMMARY.md  USAGE_GUIDE.md  pyproject.toml  requirements.txt  slidown.py
docs/: index.html
examples/: README.html  README.md
scripts/: release.sh  test_package.sh
templates/: dark.json  default.json
utils/: __init__.py  code_highlight.py  parser.py  theme.py
website/: index.html
